Added text detection and some renaming changes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,6 +130,11 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.4.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
+    // To recognize Latin script
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
+
+    // To recognize Devanagari script
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-devanagari:16.0.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
