--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.0",
-    "react-native-uvc-camera": "^2.0.2"
+    "react-native-uvc-camera": "^2.0.2",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
