--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-uvc-camera": "^2.0.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1"
   },
   "devDependencies": {
