--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,7 +136,7 @@ dependencies {
     // To recognize Devanagari script
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition-devanagari:16.0.0'
 
-    implementation 'com.google.mlkit:face-mesh-detection:16.0.0-beta2'
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
