--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,6 @@
       </activity>
       <meta-data
         android:name="com.google.mlkit.vision.DEPENDENCIES"
-        android:value="ocr" />
+        android:value="ocr,face" />
     </application>
 </manifest>
