--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-svg": "^15.2.0",
     "react-native-uvc-camera": "^2.0.2"
   },
   "devDependencies": {
