--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,28 +83,28 @@ android {
         versionName "1.0"
     }
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-        }
+//        debug {
+//            storeFile file('debug.keystore')
+//            storePassword 'android'
+//            keyAlias 'androiddebugkey'
+//            keyPassword 'android'
+//        }
         release {
-            storeFile file('smartg.keystore')
+            storeFile file('my-release-key.keystore')
             storePassword 'something'
-            keyAlias 'smartg'
+            keyAlias 'my-key-alias'
             keyPassword 'something'
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
+//        debug {
+//            signingConfig signingConfigs.debug
+//        }
         release {
             signingConfig signingConfigs.release
-            minifyEnabled enableProguardInReleaseBuilds
-            shrinkResources true
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+//            minifyEnabled enableProguardInReleaseBuilds
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
     aaptOptions {
@@ -115,7 +115,8 @@ android {
         enableHermes: true  // <- set to true to enable Hermes
     ]
     packagingOptions {
-        exclude '/com/serenegiant/widget/IAspectRatioView.class'
+//        exclude 'com/serenegiant/widget/IAspectRatioView.class'
+        exclude 'build/intermediates/external_libs_dex/release/mergeExtDexRelease/classes2.dex'
     }
 }
 
